force-app/main/default/objects/Onboarding_Document__c/fields/Docusign_Gen_Template__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Gen_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docusign Gen Template</label>
    <referenceTo>dfsle__GenTemplate__c</referenceTo>
    <relationshipLabel>Onboarding Documents</relationshipLabel>
    <relationshipName>Onboarding_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>