force-app/main/default/objects/Onboarding_Document__c/fields/Ready_for_Signature__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Signature?</label>
    <type>Checkbox</type>
</CustomField>