force-app/main/default/objects/Onboarding_Document__c/fields/Signing_URL__c.field-meta.xml
<CustomField>
    <fullName>Signing_URL__c</fullName>
    <label>Signing URL</label>
    <type>Url</type>
</CustomField>